<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_send"
        android:layout_width="359dp"
        android:layout_height="97dp"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/descSend1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <EditText
        android:id="@+id/themaSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="Thema Prüfung*"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/typeSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/fachSend"
        android:layout_width="212dp"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/themaSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/typeSend"
        android:layout_width="162dp"
        android:layout_height="33dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/noteSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Note-E" />

        <RadioButton
            android:layout_width="88dp"
            android:layout_height="match_parent"
            android:text="Note-A" />
    </RadioGroup>

    <TextView
        android:id="@+id/descSend1"
        android:layout_width="335dp"
        android:layout_height="22dp"
        android:text="@string/descSend1"
        app:layout_constraintBottom_toTopOf="@+id/descSend2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/descSend4"
        android:layout_width="334dp"
        android:layout_height="39dp"
        android:layout_marginBottom="52dp"
        android:text="@string/descSend4"
        app:layout_constraintBottom_toTopOf="@+id/dateSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/descSend2"
        android:layout_width="335dp"
        android:layout_height="39dp"
        android:text="@string/descSend2"
        app:layout_constraintBottom_toTopOf="@+id/descSend3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/descSend3"
        android:layout_width="335dp"
        android:layout_height="53dp"
        android:text="@string/descSend3"
        app:layout_constraintBottom_toTopOf="@+id/descSend4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/dateSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="Fach*"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/fachSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/noteSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="Note*"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/begrSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/begrSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="Begründung &lt;4.0"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/descSend6"
        android:layout_width="295dp"
        android:layout_height="28dp"
        android:text="@string/descSend6"
        app:layout_constraintBottom_toTopOf="@+id/descSend7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/descSend7"
        android:layout_width="296dp"
        android:layout_height="57dp"
        android:text="@string/descSend7"
        app:layout_constraintBottom_toTopOf="@+id/noteform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Absenden"
        app:layout_constraintBottom_toTopOf="@+id/descSend5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/noteform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Notenformular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/descSend5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descSend5"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toTopOf="@+id/descSend6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>